# WeDPR-Component

./: .gitignore  ChangeLog.md  README.md
cpp/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
cpp/cmake/: BuildInfo.cmake  CompilerSettings.cmake  Coverage.cmake  Dependencies.cmake  FindGSasl.cmake  IncludeDirectories.cmake  InstallBcosUtilities.cmake  Installlibhdfs3.cmake  Options.cmake  ProjectTCMalloc.cmake  TargetSettings.cmake  Version.cmake  java.cmake  python.cmake
cpp/libinitializer/: CMakeLists.txt  FrontInitializer.cpp  FrontInitializer.h  Initializer.cpp  Initializer.h  ProFrontInitializer.h  ProtocolInitializer.h
cpp/ppc-cem/src/: CEMService.cpp  CEMService.h
cpp/ppc-cem/tests/: TestCEMService.cpp
cpp/ppc-cem/tests/data/: config.ini
cpp/ppc-crypto-c-sdk/: CMakeLists.txt
cpp/ppc-crypto-c-sdk/bindings/java/: build.gradle
cpp/ppc-crypto-core/src/: CMakeLists.txt
cpp/ppc-crypto/src/: CMakeLists.txt
cpp/ppc-framework/: Common.h  Helper.h
cpp/ppc-framework/front/: Channel.h  FrontConfig.h  FrontInterface.h  IFront.h  IFrontBuilder.h
cpp/ppc-framework/gateway/: GatewayInterface.h  GatewayProtocol.h  IGateway.h
cpp/ppc-framework/io/: DataBatch.h  DataResourceLoader.h  LineReader.h
cpp/ppc-framework/protocol/: DataResource.h  EndPoint.h  GlobalConfig.h  GrpcConfig.h  INodeInfo.h  Message.h  MessagePayload.h  PPCMessageFace.h  PartyResource.h  Protocol.h  RouteType.h  Task.h
cpp/ppc-framework/psi/: TaskFrameworkInterface.h
cpp/ppc-framework/rpc/: RpcStatusInterface.h  RpcTypeDef.h
cpp/ppc-front/ppc-front/: CallbackManager.cpp  CallbackManager.h  Common.h  Front.cpp  Front.h  PPCChannel.h  PPCChannelManager.cpp
cpp/ppc-front/test/: CMakeLists.txt
cpp/ppc-front/test/unittests/: PPCChannelTest.cpp
cpp/ppc-gateway/: CMakeLists.txt
cpp/ppc-gateway/ppc-gateway/: Common.h  FrontNodeManager.cpp  FrontNodeManager.h  Gateway.cpp  Gateway.h  GatewayConfigContext.cpp  GatewayConfigContext.h  GatewayConfigLoader.h  GatewayFactory.cpp  ProTaskManager.h  TaskManager.cpp  TaskManager.h  WebSocketService.cpp  WebSocketService.h
cpp/ppc-gateway/ppc-gateway/gateway/: GatewayImpl.cpp  GatewayImpl.h
cpp/ppc-gateway/ppc-gateway/p2p/: Service.cpp  Service.h
cpp/ppc-gateway/test/: CMakeLists.txt
cpp/ppc-http/: CMakeLists.txt
cpp/ppc-http/src/: HttpFactory.cpp
cpp/ppc-io/: CMakeLists.txt
cpp/ppc-io/demo/: CMakeLists.txt
cpp/ppc-io/src/: BaseFileLineReader.h  DataResourceLoaderImpl.cpp  DataResourceLoaderImpl.h  SQLResultReader.h
cpp/ppc-io/tests/: TestLineReader.cpp
cpp/ppc-main/: CMakeLists.txt
cpp/ppc-main/air-node/: AirNodeInitializer.cpp  AirNodeInitializer.h  CMakeLists.txt  main.cpp
cpp/ppc-main/cem-node/: CEMInitializer.cpp  CEMInitializer.h  main.cpp
cpp/ppc-main/gateway/: CMakeLists.txt  GatewayServiceApp.cpp  GatewayServiceApp.h  main.cpp
cpp/ppc-main/mpc-node/: MPCInitializer.h  main.cpp
cpp/ppc-main/pro-node/: CMakeLists.txt  ProNodeServiceApp.cpp  ProNodeServiceApp.h  main.cpp
cpp/ppc-mpc/: CMakeLists.txt
cpp/ppc-mpc/src/: CMakeLists.txt  Common.h  MPCService.cpp
cpp/ppc-pir/: CMakeLists.txt
cpp/ppc-pir/src/: Common.h  OtPIRConfig.h  OtPIRFactory.h  OtPIRImpl.cpp
cpp/ppc-pir/tests/: CMakeLists.txt  FakeOtPIRFactory.h  TestBaseOT.cpp
cpp/ppc-protocol/src/: JsonTaskImpl.cpp  JsonTaskImpl.h  PPCMessage.cpp  PPCMessage.h
cpp/ppc-protocol/tests/: CMakeLists.txt  PPCMessageTest.cpp  TestTaskImpl.cpp
cpp/ppc-psi/: CMakeLists.txt
cpp/ppc-psi/src/: Common.h  PSIConfig.h
cpp/ppc-psi/tests/: CMakeLists.txt
cpp/ppc-rpc/src/: Rpc.h  RpcMemory.cpp  RpcMemory.h
cpp/ppc-storage/: CMakeLists.txt
cpp/ppc-storage/src/: FileStorageFactoryImpl.h  SQLStorageFactoryImpl.h
cpp/ppc-tars-protocol/: CMakeLists.txt
cpp/ppc-tars-protocol/ppc-tars-protocol/: Common.h  TarsSerialize.h  TarsStruct.h
cpp/ppc-tars-protocol/test/: CMakeLists.txt  SerializeTest.cpp
cpp/ppc-tars-service/FrontService/: FrontServiceServer.cpp  FrontServiceServer.h
cpp/ppc-tars-service/GatewayService/: GatewayInitializer.cpp  GatewayInitializer.h  GatewayServiceServer.cpp  GatewayServiceServer.h
cpp/ppc-tools/: CMakeLists.txt
cpp/ppc-udf/: CMakeLists.txt
cpp/ppc-utilities/: Utilities.h
cpp/test-utils/: FakeFront.h  FakePPCMessage.h  TaskMock.h
cpp/tools/: build_ppc.sh  build_wedpr_cem.sh  build_wedpr_mpc.sh  install_depends.sh
cpp/tools/ppc-builder/: build_ppc.py
cpp/wedpr-component-c-sdk/: CMakeLists.txt
cpp/wedpr-component-sdk/: CMakeLists.txt
cpp/wedpr-component-sdk/wedpr-front-cpp-sdk/: CMakeLists.txt  wedpr_front_c.cpp  wedpr_front_c.h  wedpr_front_common.h  wedpr_front_config.h  wedpr_msg.h
cpp/wedpr-crypto/ppc-crypto/: CMakeLists.txt
cpp/wedpr-crypto/ppc-crypto-core/: CMakeLists.txt
cpp/wedpr-crypto/ppc-homo/: CMakeLists.txt
cpp/wedpr-crypto/sdk/: CMakeLists.txt
cpp/wedpr-helper/libhelper/: CMakeLists.txt  CommandHelper.cpp  CommandHelper.h
cpp/wedpr-helper/ppc-utilities/: Utilities.h
cpp/wedpr-initializer/: Initializer.cpp  Initializer.h
cpp/wedpr-main/: CMakeLists.txt
cpp/wedpr-main/air-node/: AirNodeInitializer.cpp  main.cpp
cpp/wedpr-main/cem-node/: CEMInitializer.cpp
cpp/wedpr-main/common/: NodeStarter.h
cpp/wedpr-main/gateway/: CMakeLists.txt  GatewayInitializer.cpp  GatewayInitializer.h  main.cpp
cpp/wedpr-main/mpc-node/: CMakeLists.txt  MPCInitializer.cpp  MPCInitializer.h
cpp/wedpr-main/pro-node/: CMakeLists.txt  ProNodeInitializer.cpp  main.cpp
cpp/wedpr-protocol/grpc/: CMakeLists.txt  Common.h
cpp/wedpr-protocol/protobuf/: CMakeLists.txt  NodeInfoImpl.cpp  NodeInfoImpl.h  RequestConverter.h
cpp/wedpr-protocol/protocol/: CMakeLists.txt
cpp/wedpr-protocol/tars/: CMakeLists.txt  TarsStruct.h
cpp/wedpr-transport/ppc-front/: CMakeLists.txt
cpp/wedpr-transport/ppc-gateway/: CMakeLists.txt
cpp/wedpr-transport/ppc-rpc/: CMakeLists.txt
cpp/wedpr-transport/sdk/: CMakeLists.txt  ProTransportImpl.cpp  ProTransportImpl.h  Transport.h  TransportBuilder.cpp  TransportBuilder.h  TransportImpl.h
cpp/wedpr-transport/sdk-wrapper/: CMakeLists.txt
(+577 files in other folders)
