file(GLOB_RECURSE SRCS *.i)
set_source_files_properties(${SRCS} PROPERTIES CPLUSPLUS ON)

set(WEDPR_TRANSPORT_PACKAGE "com.webank.wedpr.sdk.jni.transport")

set_property(SOURCE swig/wedpr_java_transport.i PROPERTY COMPILE_OPTIONS
  -package ${WEDPR_TRANSPORT_PACKAGE})

swig_add_library(${WEDPR_JAVA_TRANSPORT}
  TYPE MODULE
  LANGUAGE java
  OUTPUT_DIR ${WEDPR_JAVA_TRANSPORT_DIR}
  SOURCES ${SRCS})

SET(LIBRARY_OUTPUT_PATH ${WEDPR_JAVA_TRANSPORT_DIR})
message("LIBRARY_OUTPUT_PATH: ${WEDPR_JAVA_TRANSPORT_DIR}")

set_target_properties(${WEDPR_JAVA_TRANSPORT} PROPERTIES
  SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON
  POSITION_INDEPENDENT_CODE ON)

target_include_directories(${WEDPR_JAVA_TRANSPORT} PRIVATE ${JNI_INCLUDE_DIRS})

target_link_libraries(${WEDPR_JAVA_TRANSPORT} PRIVATE ${WEDPR_TRANSPORT_SDK_TARGET} ${JAVA_LIBRARIES})